@@ -53,5 +53,5 @@ setMethod("chipName", "NimbleGenPDInfoPkgSeed",
           if ("pairFile" %in% slotNames(object))
             if(nchar(slot(object, "pairFile"))> 0)
                 return(readPairHeader(object@pairFile)[["DesignName"]])
-          return(strsplit(tolower(basename(object@ndfFile)), ".ndf")[[1]])
+          return(strsplit(tolower(basename(object@ndfFile)), "\\.ndf$")[[1]])
         })
