@@ -88,3 +88,9 @@ Changes by BC in Feb-Mar 2009
 04-29-2009 - B Carvalho
 
 ** Fixed merging of NDF and POS files (NimbleGen Tiling Arrays)
+
+05-14-2009 - B Carvalho
+
+** Fixed problem with chipName for NimbleGen arrays. Improved the regular expression to find specifically "\\.ndf$"
+
+** Removed requirement of ALLELE in probe sequence file for Affy SNP chips
